[gd_scene load_steps=25 format=2]

[ext_resource path="res://fonts/Monda-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/SaveDataManager.gd" type="Script" id=2]
[ext_resource path="res://art/ui/menubg.png" type="Texture" id=3]
[ext_resource path="res://fonts/Galdeano-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/ui/line_test.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/SaveItemPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/ui/close cross.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/MemoInputPanel.gd" type="Script" id=8]
[ext_resource path="res://fonts/SawarabiGothic-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="AtlasTexture" id=120]
flags = 15
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1280, 720 )

[sub_resource type="DynamicFont" id=1]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=111]
size = 19
use_mipmaps = true
use_filter = true
extra_spacing_top = -5
extra_spacing_bottom = -3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=115]
bg_color = Color( 0.133333, 0.152941, 0.192157, 0.443137 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=112]
bg_color = Color( 0.870588, 0.882353, 0.92549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=117]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=116]
size = 24
extra_spacing_top = -8
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=121]
bg_color = Color( 0.156863, 0.294118, 0.47451, 0.752941 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="AtlasTexture" id=122]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=123]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=124]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=127]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="DynamicFont" id=125]
extra_spacing_top = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=114]
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=126]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SaveDataManager" type="CanvasLayer" groups=["MenuScreen"]]
layer = 64
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 120 )

[node name="FillRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1481, -122 )
color = Color( 0, 0, 0, 0.243137 )

[node name="safe-rect-43" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -450.0
margin_right = 450.0
rect_pivot_offset = Vector2( 1481, -122 )
color = Color( 0, 0, 0, 0.243137 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.014
anchor_bottom = 1.0
margin_top = 126.0
margin_right = -34.92
margin_bottom = -586.0
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
visible = false
anchor_left = 0.49
anchor_top = -15.125
anchor_right = 0.49
anchor_bottom = 1.0
margin_left = -289.87
margin_top = 129.0
margin_right = -281.87
margin_bottom = 566.0
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.0
margin_top = 21.0
margin_right = 104.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "Save"
align = 1
valign = 1

[node name="CategoryButtons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -446.0
margin_top = 94.0
margin_right = 450.0
margin_bottom = -594.0

[node name="SaveButton" type="Button" parent="CategoryButtons"]
margin_right = 125.0
margin_bottom = 32.0
rect_min_size = Vector2( 125, 0 )
rect_pivot_offset = Vector2( 92, 28 )
focus_neighbour_bottom = NodePath("../../Page/SaveItemPanel")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
pressed = true
text = "Save"

[node name="LoadButton" type="Button" parent="CategoryButtons"]
margin_left = 129.0
margin_right = 254.0
margin_bottom = 32.0
rect_min_size = Vector2( 125, 0 )
rect_pivot_offset = Vector2( 92, 28 )
focus_neighbour_bottom = NodePath("../../Page/SaveItemPanel")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "Load"

[node name="VSeparator" type="VSeparator" parent="CategoryButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 258.0
margin_right = 767.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ReturnButton" type="Button" parent="CategoryButtons"]
margin_left = 771.0
margin_right = 896.0
margin_bottom = 32.0
rect_min_size = Vector2( 125, 0 )
rect_pivot_offset = Vector2( 92, 28 )
focus_neighbour_bottom = NodePath("../../Page/SaveItemPanel")
focus_next = NodePath("../../Page/SaveItemPanel")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "Return"

[node name="ColorRect" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -412.0
margin_top = 134.0
margin_right = 416.0
margin_bottom = -48.0
custom_styles/panel = SubResource( 115 )

[node name="Panel" type="Panel" parent="." groups=["SaveDeletePanel"]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_top = 11.0
margin_right = -12.0
margin_bottom = 78.0
custom_styles/panel = SubResource( 112 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_colors/font_color_shadow = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 117 )
text = "Drag & Drop
Here To Delete"
align = 1
valign = 1

[node name="Page" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -394.0
margin_top = 151.0
margin_right = 398.0
margin_bottom = -65.0
columns = 4

[node name="SaveItemPanel" parent="Page" instance=ExtResource( 6 )]
focus_neighbour_top = NodePath("../../CategoryButtons/SaveButton")
focus_previous = NodePath("../../CategoryButtons/SaveButton")

[node name="SaveItemPanel2" parent="Page" instance=ExtResource( 6 )]
margin_left = 198.0
margin_right = 392.0
focus_neighbour_top = NodePath("../../CategoryButtons/SaveButton")

[node name="SaveItemPanel3" parent="Page" instance=ExtResource( 6 )]
margin_left = 396.0
margin_right = 590.0
focus_neighbour_top = NodePath("../../CategoryButtons/SaveButton")

[node name="SaveItemPanel4" parent="Page" instance=ExtResource( 6 )]
margin_left = 594.0
margin_right = 788.0
focus_neighbour_top = NodePath("../../CategoryButtons/SaveButton")

[node name="SaveItemPanel5" parent="Page" instance=ExtResource( 6 )]
margin_top = 168.0
margin_bottom = 332.0

[node name="SaveItemPanel6" parent="Page" instance=ExtResource( 6 )]
margin_left = 198.0
margin_top = 168.0
margin_right = 392.0
margin_bottom = 332.0

[node name="SaveItemPanel7" parent="Page" instance=ExtResource( 6 )]
margin_left = 396.0
margin_top = 168.0
margin_right = 590.0
margin_bottom = 332.0

[node name="SaveItemPanel8" parent="Page" instance=ExtResource( 6 )]
margin_left = 594.0
margin_top = 168.0
margin_right = 788.0
margin_bottom = 332.0

[node name="SaveItemPanel9" parent="Page" instance=ExtResource( 6 )]
margin_top = 336.0
margin_bottom = 500.0
focus_neighbour_bottom = NodePath("../../PageButtons/Page1")

[node name="SaveItemPanel10" parent="Page" instance=ExtResource( 6 )]
margin_left = 198.0
margin_top = 336.0
margin_right = 392.0
margin_bottom = 500.0
focus_neighbour_bottom = NodePath("../../PageButtons/Page1")

[node name="SaveItemPanel11" parent="Page" instance=ExtResource( 6 )]
margin_left = 396.0
margin_top = 336.0
margin_right = 590.0
margin_bottom = 500.0
focus_neighbour_bottom = NodePath("../../PageButtons/Page1")

[node name="SaveItemPanel12" parent="Page" instance=ExtResource( 6 )]
margin_left = 594.0
margin_top = 336.0
margin_right = 788.0
margin_bottom = 500.0
focus_neighbour_bottom = NodePath("../../PageButtons/Page1")
focus_next = NodePath("../../PageButtons/Page1")

[node name="PageButtons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -412.0
margin_top = -47.0
margin_right = 416.0
margin_bottom = -13.0

[node name="PageLabel" type="Label" parent="PageButtons"]
margin_top = 3.0
margin_right = 87.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 116 )
text = "   Page  "

[node name="Page1" type="Button" parent="PageButtons"]
margin_left = 91.0
margin_right = 139.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
focus_previous = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
pressed = true
text = "1"

[node name="Page2" type="Button" parent="PageButtons"]
margin_left = 143.0
margin_right = 191.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "2"

[node name="Page3" type="Button" parent="PageButtons"]
margin_left = 195.0
margin_right = 243.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "3"

[node name="Page4" type="Button" parent="PageButtons"]
margin_left = 247.0
margin_right = 295.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "4"

[node name="Page5" type="Button" parent="PageButtons"]
margin_left = 299.0
margin_right = 347.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "5"

[node name="Page6" type="Button" parent="PageButtons"]
margin_left = 351.0
margin_right = 399.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "6"

[node name="Page7" type="Button" parent="PageButtons"]
margin_left = 403.0
margin_right = 451.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "7"

[node name="Page8" type="Button" parent="PageButtons"]
margin_left = 455.0
margin_right = 503.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "8"

[node name="Page9" type="Button" parent="PageButtons"]
margin_left = 507.0
margin_right = 555.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "9"

[node name="Page10" type="Button" parent="PageButtons"]
margin_left = 559.0
margin_right = 607.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "10"

[node name="Separator" type="VSeparator" parent="PageButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 611.0
margin_right = 724.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="PageA" type="Button" parent="PageButtons"]
margin_left = 728.0
margin_right = 776.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "A"

[node name="PageQ" type="Button" parent="PageButtons"]
margin_left = 780.0
margin_right = 828.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
focus_neighbour_top = NodePath("../../Page/SaveItemPanel12")
custom_fonts/font = SubResource( 111 )
toggle_mode = true
text = "Q"

[node name="MemoInputPanel" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1481, -122 )
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="MemoInputPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 121 )

[node name="Close" type="TextureButton" parent="MemoInputPanel/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 24.0
texture_normal = SubResource( 122 )
texture_pressed = SubResource( 123 )
texture_hover = SubResource( 124 )
texture_focused = SubResource( 127 )
expand = true

[node name="Title" type="Label" parent="MemoInputPanel/Panel"]
anchor_right = 1.0
margin_left = 3.0
margin_right = -35.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 125 )
text = "Set Memo for Save File"

[node name="TextEdit" type="TextEdit" parent="MemoInputPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 25.0
margin_right = -3.0
margin_bottom = -38.0
rect_pivot_offset = Vector2( 1144, 40 )
custom_colors/selection_color = Color( 0.254902, 0.415686, 0.831373, 1 )
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 114 )
custom_styles/normal = SubResource( 126 )
override_selected_font_color = true

[node name="Buttons" type="HBoxContainer" parent="MemoInputPanel/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -33.0

[node name="VSeparator" type="VSeparator" parent="MemoInputPanel/Panel/Buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 81.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="OK" type="Button" parent="MemoInputPanel/Panel/Buttons"]
margin_left = 85.0
margin_right = 160.0
margin_bottom = 33.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 125 )
text = "OK"

[node name="VSeparator2" type="VSeparator" parent="MemoInputPanel/Panel/Buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 164.0
margin_right = 185.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Cancel" type="Button" parent="MemoInputPanel/Panel/Buttons"]
margin_left = 189.0
margin_right = 264.0
margin_bottom = 33.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 125 )
text = "Cancel"

[node name="VSeparator3" type="VSeparator" parent="MemoInputPanel/Panel/Buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 268.0
margin_right = 350.0
margin_bottom = 33.0
size_flags_horizontal = 3
